[package]
name = "native-program-create"
version = "0.1.0"
description = "Native Solana program for creating compressed accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_program_create"

[features]
no-entrypoint = []
test-sbf = []
test-helpers = ["dep:light-program-test", "dep:solana-sdk"]
default = []

[dependencies]
light-sdk = "0.17.1"
light-sdk-types = "0.17.1"
light-hasher = { version = "5.0.0", features = ["solana"] }
light-macros = { version = "2.2.0", features = ["solana"] }
solana-program = "2.2"
borsh = "0.10.4"
light-program-test = { version = "0.17.1", optional = true }
solana-sdk = { version = "2.2", optional = true }

[dev-dependencies]
light-program-test = "0.17.1"
light-client = "0.17.2"
tokio = "1.36.0"
solana-sdk = "2.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
