[package]
name = "native-program-reinit"
version = "0.1.0"
description = "Native Solana program for reinitializing compressed accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_program_reinit"

[features]
no-entrypoint = []
test-sbf = ["test-helpers"]
test-helpers = ["dep:light-program-test", "dep:light-client", "dep:solana-sdk"]
default = []

[[test]]
name = "test"
required-features = ["test-helpers"]

[dependencies]
light-sdk = "0.23.0"
light-hasher = "5.0.0"
light-macros = "2.2.0"
solana-program = "2.2"
borsh = "0.10.4"
light-program-test = { version = "0.23.0", optional = true }
light-client = { version = "0.23.0", optional = true }
solana-sdk = { version = "2.2", optional = true }

[dev-dependencies]
tokio = "1.49.0"
blake3 = "=1.8.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
