[package]
name = "native-program-update"
version = "0.1.0"
description = "Native Solana program for updating compressed accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_program_update"

[features]
no-entrypoint = []
test-sbf = ["test-helpers"]
test-helpers = ["dep:light-program-test", "dep:solana-sdk"]
default = []

[[test]]
name = "test"
required-features = ["test-helpers"]

[dependencies]
light-sdk = { version = "0.16.0" }
light-sdk-types = { version = "0.16.0" }
light-hasher = { version = "3.1.0", features = ["solana"] }
light-macros = { version = "2.1.0", features = ["solana"] }
solana-program = "2.2"
borsh = "0.10.4"
light-program-test = { version = "0.16.0", optional = true }
solana-sdk = { version = "2.2", optional = true }

[dev-dependencies]
light-client = { version = "0.16.0" }
tokio = "1.36.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
