[package]
name = "counter"
version = "0.0.11"
description = "Created with Anchor"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", rev = "88a6bba7735c4a54db32351655cb4379a412684a", features = ["solana"] }
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "88a6bba7735c4a54db32351655cb4379a412684a", features = ["anchor"] }
light-sdk-types = { git = "https://github.com/Lightprotocol/light-protocol", rev = "88a6bba7735c4a54db32351655cb4379a412684a", features = ["anchor"] }

[dev-dependencies]
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "88a6bba7735c4a54db32351655cb4379a412684a" }
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = { version = "2.2", features = ["curve25519", "sha2"] }
solana-signer = "2.2"
solana-transaction = "2.2"

light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "88a6bba7735c4a54db32351655cb4379a412684a" }
tokio = "1.43.0"
solana-sdk = "2.2"
