[package]
name = "counter"
version = "0.0.11"
description = "Created with Anchor"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-hasher = { version = "5.0.0", features = ["solana"] }
light-sdk = { version = "0.17", features = ["anchor", "v2"] }
light-sdk-types = { version = "0.17.1", features = ["anchor", "v2"] }

[dev-dependencies]
light-client = "0.17.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = { version = "2.2", features = ["curve25519", "sha2"] }
solana-signer = "2.2"
solana-transaction = "2.2"

light-program-test = "0.17.1"
tokio = "1.43.0"
solana-sdk = "2.2"
