[package]
name = "zk-id"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_id"

[features]
default = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10.4"
light-sdk = { version = "0.23.0", features = ["anchor", "cpi-context", "poseidon", "merkle-tree"] }
light-hasher = "5.0.0"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "66c0dc87d0808c4d2aadb53c61435b6edb8ddfd9" }

[dev-dependencies]
light-program-test = "0.23.0"
light-client = "0.23.0"
tokio = "1.49.0"
solana-sdk = "2.2"
circom-prover = "0.1"
rust-witness = "0.1"
num-bigint = "0.4"
serde_json = "1.0"
light-compressed-account = "0.11.0"
light-merkle-tree-reference = "4.0.0"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", features = ["vk", "circom"], rev = "66c0dc87d0808c4d2aadb53c61435b6edb8ddfd9" }
blake3 = "=1.8.2"

[build-dependencies]

[target.'cfg(not(target_os = "solana"))'.build-dependencies]
rust-witness = "0.1"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", features = ["vk"], rev = "66c0dc87d0808c4d2aadb53c61435b6edb8ddfd9" }

[profile.release]
overflow-checks = true
