[package]
name = "burn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.15.0", features = ["anchor"] }
light-sdk-types = { version = "0.15.0" }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

[dev-dependencies]
light-client = { version = "0.15.0" }
light-program-test = { version = "0.15.0" }
tokio = "1.36.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
