[package]
name = "close"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "close"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.18.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

[dev-dependencies]
light-client = "0.18.0"
light-program-test = "0.18.0"
tokio = "1.36.0"
blake3 = "=1.8.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
